[package]
name = "light"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"]}
rand = "0.9.0"
dotenv = "0.15.0"
